CREATE TABLE dim_channel (
    channel_id SERIAL PRIMARY KEY,
    channel_name TEXT  -- e.g. Online, In-Store, Mobile App, Partner
);