CREATE TABLE dim_product (
    product_id SERIAL PRIMARY KEY,
    name TEXT,
    category TEXT,
    brand TEXT
);