Table dim_customer {
  customer_id int [pk, increment]
  name text
  email text
  country text
  signup_date date
}

Table dim_product {
  product_id int [pk, increment]
  name text
  category text
  brand text
}

Table dim_date {
  date_id date [pk]
  day int
  month int
  year int
  weekday text
}

Table dim_store {
  store_id int [pk, increment]
  store_name text
  city text
  country text
  store_type text
}

Table dim_salesperson {
  salesperson_id int [pk, increment]
  name text
  email text
  region text
  hire_date date
}

Table dim_channel {
  channel_id int [pk, increment]
  channel_name text
}

Table fact_sales {
  sales_id int [pk, increment]

  date_id date
  customer_id int
  product_id int

  store_id int
  salesperson_id int
  channel_id int

  quantity int
  unit_price decimal
  total_amount decimal
}

Ref: fact_sales.date_id > dim_date.date_id
Ref: fact_sales.customer_id > dim_customer.customer_id
Ref: fact_sales.product_id > dim_product.product_id

Ref: fact_sales.store_id > dim_store.store_id
Ref: fact_sales.salesperson_id > dim_salesperson.salesperson_id
Ref: fact_sales.channel_id > dim_channel.channel_id